--- a/style.css
+++ b/style.css
@@ -104,17 +104,19 @@ nav h1 {
 
 .workcard span{
     padding: 15px;
+    font-size: 1.2rem;
+    font-weight: 900;
 }
 .workcard p{
     color: white;
     padding: 15px;
-    font-weight: 300;
-    font-size: 1rem;
+    font-weight: 100;
+    font-size: 0.9rem;
     letter-spacing: 1px;
 }
 
 a{
-    text-decoration: none;
+    text-decoration: underline;
     color: white;
     font-weight: 100;
     font-size: 0.8rem;
