--- a/style.css
+++ b/style.css
@@ -25,8 +25,11 @@ html {
 
 .main-container{
     max-width: 90%;
-    justify-self: center;
+    margin: 0 auto;
     justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 nav{
@@ -53,6 +56,7 @@ nav h1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    margin: 0 auto;
     max-width: 100%;
     gap: 10px;
     grid-template-areas: 
@@ -126,6 +130,7 @@ a{
 .cards{
     margin-top: 10px;
     display: grid;
+    margin: 0 auto;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
     max-width: 100%;
@@ -139,6 +144,10 @@ a{
     background-color: black(29, 29, 29);
     border-radius: 15px;
     overflow: hidden;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .workcard img{
@@ -210,6 +219,7 @@ a{
 
 @media screen and (max-width : 650px) {
     .bento-grid-container{
+        margin: 0 auto;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         grid-template-areas: 
