--- a/workstyles.css
+++ b/workstyles.css
@@ -14,20 +14,15 @@ body {
 
 }
 
+
 html {
     scroll-behavior: smooth;
 }
 
-#background {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
+
 
 .techstack img{
     height: 40px;
-    transition: 0.4s;
 }
 
 .main-container{
@@ -39,7 +34,7 @@ html {
     align-items: center;
 }
 
-header{
+nav{
     padding-top: 30px;
     box-shadow: 2px;
     width: 100%;
@@ -49,11 +44,7 @@ header{
     min-height:100px;
 }
 
-.tci:hover{
-    height: 60px;
-}
-
-header h1 {
+nav h1 {
     padding: 20px;
     font-size: 3rem;
     color: #D4D4D8;
@@ -77,7 +68,7 @@ header h1 {
 .techstack, .socials{
     background-color: rgba(10, 10, 10, 0.7);
     border-radius: 15px;
-    color: #D4D4D8;
+    color: #7E7E87;
     padding: 20px;
 
 }
@@ -86,8 +77,9 @@ header h1 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 20px;
 }
+
+
 
 .socials h3{
     color: #D4D4D8;
@@ -106,13 +98,12 @@ header h1 {
     font-weight: 100;
     font-size: 0.8rem;
     margin-bottom: 5px;
-    color: 	#7E7E87;
-
+    
 
 }
 
 .row3, .row2 span {
-    color: 	#7E7E87;
+    color: #7E7E87;
     font-size: 2rem;
     font-weight: 300;
 
@@ -124,7 +115,7 @@ header h1 {
     font-weight: 900;
 }
 .workcard p{
-    color: 	#7E7E87;
+    color: #7E7E87;
     padding: 15px;
     font-weight: 100;
     font-size: 0.9rem;
@@ -133,7 +124,7 @@ header h1 {
 
 a{
     text-decoration: underline;
-    color: 	#7E7E87;
+    color: #7E7E87;
     font-weight: 100;
     font-size: 0.8rem;
     margin-bottom: 5px;
@@ -152,25 +143,36 @@ a{
     ;
 }
 
+.workcard{
+    background-color: rgba(10, 10, 10, 0.7);
+    border-radius: 15px;
+    overflow: hidden;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-.workcard img{
-    height: 350px;
-    width: 500px;
+.workimg{
+    height: 225px;
+    width: 225px;
+    padding: 0;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 
 .bento-grid-container{
     margin-top: 10px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     max-width: 100%;
     gap: 10px;
     grid-template-areas: 
-        "clock about about"
-        "education about about"
-        "education cheesecake location"
-        "s1 t1 t1"
+        "education education s1 s1 location"
+        "education education s1 s1 location"
+        "about about about about cheesecake"
     
     ;
 }
@@ -182,29 +184,68 @@ a{
 }
 
 .bento-grid-item, .cheesecake, .timeclock p{
-    color: 	#7E7E87;
+    color: #7E7E87;
     font-weight: 300;
     font-size: 1rem;
     letter-spacing: 1px;
 }
 
-.bento-grid-item span{
-    color: 	#D4D4D8;
-    font-weight: 300;
-    font-size: 1.2rem;
+.bento-grid-item p{
+    margin-bottom: 10px;
 }
+
+.bento-grid-item a {
+    color: #D4D4D8;
+    font-size: 1.1rem; 
+    font-weight: 300;
+    text-decoration: none;
+    cursor: pointer;
+
+}
+
+
+  
+.bento-grid-item .workimg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* makes the image fill and crop nicely */
+    display: block;
+}
+
 
 .cheesecakebutton{
     font-size: 1.5rem;
     height: 100%;
     width: 100%;
-    background-color: 	#7E7E87;
+    background-color: #7E7E87;
     border: none;
     color: black;
     border-radius: 10px;
     padding: 20px;
     letter-spacing: 2px;
     transition: 0.6s;
+}
+
+.resumebutton, .githubbutton{
+    font-size: 1.4rem;
+    font-weight: 100;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(10, 10, 10, 0.7);
+    border: none;
+    color: rgb(232, 149, 75);
+    border-radius: 10px;
+    letter-spacing: 2px;
+    transition: 0.4s;
+    cursor: pointer;
+}
+
+.resumebutton:hover{
+    color: rgb(154, 99, 51);
+}
+
+.githubbutton:hover{
+    color: rgb(154, 99, 51);
 }
 
 .cheesecakebutton:hover{
@@ -215,49 +256,61 @@ a{
 
 .cheesecake{
     padding: 0;
+
 }
 
 .timeclock{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #D4D4D8;
-
 }
-
-
 
 .row1, .row2, .row3{
     margin-top: 50px;
     margin-bottom: 50px;
 } 
 
+#background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+}
 
+.tci:hover{
+    height: 60px;
+}
 
-.timeclock:hover, .socials:hover, .bento-grid-item:hover, .techstack:hover {
+#background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.bento-grid-item:hover {
     background-color: black;
 }
 
-@media screen and (max-width : 650px) {
+.bento-grid-item a:hover{
+    color: rgb(154, 99, 51);
+}
+
+@media screen and (max-width : 1200px) {
     .bento-grid-container{
         margin: 0 auto;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
         grid-template-areas: 
-            "clock"
-            "about"
-            "education"
-            "cheesecake"
-            "location"
-            "s1"
-            "t1"
+            "location education"
+            "about  about"
+            "s1 s1 "
+            "cheesecake cheesecake"
+
         
         ;
-    }
-
-    .techstack img{
-        height: 30px;
-        transition: 0.4s;
     }
 
     .cards{
@@ -270,13 +323,60 @@ a{
         ;
     }
 
-    header h1 {
+    nav h1 {
+        padding-left: 20px;
+        font-size: 3rem;
+        color: #D4D4D8;
+        font-weight: 300;
+        letter-spacing: 5px;
+        
+    }
+
+    
+}
+
+@media screen and (max-width : 650px) {
+    .bento-grid-container{
+        margin: 0 auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas: 
+            "education"
+            "about"
+            "s1"
+            "location"
+            "education"
+
+        
+        ;
+    }
+
+    .cards{
+        grid-template-columns: 1fr ;
+        grid-template-rows: auto;
+        grid-template-areas: 
+            "wc1"
+            "wc2"
+            "wc3"
+        ;
+    }
+
+    nav h1 {
         padding-left: 20px;
         font-size: 1.5rem;
         color: #D4D4D8;
         font-weight: 300;
         letter-spacing: 5px;
+
         
+    }
+
+    .workimg{
+        height: 250px;
+        width: 250px;
+        padding: 0;
+        border-radius: 10px;
+        overflow: hidden;
     }
 
     
