--- a/style.css
+++ b/style.css
@@ -82,6 +82,13 @@ header h1 {
 
 }
 
+.socials {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem; 
+    grid-area: s1;
+}
+
 .techstack{
     display: flex;
     justify-content: space-evenly;
@@ -91,24 +98,40 @@ header h1 {
 
 .socials h3{
     color: #D4D4D8;
-    font-size: 2rem;
+    font-size: 2.0rem;
     font-weight: 300;
-    margin-bottom: 2px;
+    margin: 0;
 }
 
 .socials h5{
     font-weight: 300;
     font-size: 1.2rem;
-    margin-bottom: 1px;
+    margin: 0;
 }
 
 .socials p{
     font-weight: 100;
-    font-size: 0.8rem;
-    margin-bottom: 5px;
+    font-size: 1rem;
     color: 	#7E7E87;
+    margin: 0;
 
 
+}
+
+.socials a {
+    color: #7E7E87;
+    font-size: 1rem;
+    text-decoration: none;
+}
+
+.social-links {
+    display: flex;
+    gap: 1rem; /* controls space between each link */
+    flex-wrap: wrap; /* optional, allows wrapping on smaller screens */
+}
+
+.socials a:hover {
+    color: rgb(154, 99, 51);
 }
 
 .row3, .row2 span {
@@ -272,11 +295,27 @@ a{
 
     header h1 {
         padding-left: 20px;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: #D4D4D8;
         font-weight: 300;
         letter-spacing: 5px;
         
+    }
+
+    .socials h3{
+
+        font-size: 1.5rem;
+
+    }
+    
+    .socials h5{
+        font-size: 1.0rem;
+
+    }
+
+    .techstack img{
+        height: 30px;
+        transition: 0.4s;
     }
 
     
