--- a/workstyles.css
+++ b/workstyles.css
@@ -298,6 +298,12 @@ a{
     color: rgb(154, 99, 51);
 }
 
+.bento-grid-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
 @media screen and (max-width : 1200px) {
     .bento-grid-container{
         margin: 0 auto;
@@ -345,8 +351,7 @@ a{
             "about"
             "s1"
             "location"
-            "education"
-
+            "cheesecake"
         
         ;
     }
@@ -363,7 +368,7 @@ a{
 
     nav h1 {
         padding-left: 20px;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: #D4D4D8;
         font-weight: 300;
         letter-spacing: 5px;
