--- a/indexstyle.css
+++ b/indexstyle.css
@@ -22,37 +22,6 @@ html, body {
 }
 
 
-
-.navigation-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 0 5vw;
-  background: rgba(255, 255, 255, 0.050); 
-  backdrop-filter: blur(10px);         
-  -webkit-backdrop-filter: blur(10px);   
-  border-bottom: 0.1px solid rgba(255, 255, 255, 0.463); 
-  
-  z-index: 10;
-}
-
-.nav-links a {
-  margin-left: 2rem;
-  text-decoration: none;
-  color: black;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-.nav-links a:hover {
-  color: #777;
-}
-
 /* HERO SECTION */
 .hero {
   display: flex;
@@ -170,7 +139,7 @@ html, body {
 
 .work-section {
 
-  background: #fff;
+  background: #f5f5f5;
   overflow-x: auto;           
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -485,7 +454,7 @@ html, body {
 }
 
 .skill-item {
-  border: 1px solid black;
+  background-color: #f5f5f5;
   text-align: center;
   padding: 12px 10px;
   font-size: 0.95rem;
