--- a/indexstyle.css
+++ b/indexstyle.css
@@ -77,6 +77,7 @@ html, body {
   font-weight: 500;
   border: none;
   transition: 0.3s ease;
+  border-radius: 7px;
 
 }
 
@@ -174,6 +175,7 @@ html, body {
   flex-direction: column;
   justify-content: space-evenly;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 
 }
 
@@ -211,6 +213,7 @@ html, body {
   line-height: 0;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
+  border-radius: 5px;
 }
 
 .open-modal:hover {
@@ -243,6 +246,7 @@ html, body {
   text-align: left;
   height: 80vh;
   overflow-y: auto;
+  border-radius: 10px;
 }
 
 .modal-content h3 {
@@ -400,12 +404,14 @@ html, body {
 .about-image {
   flex: 1;
   max-width: 400px;
+
 }
 .about-image img {
   width: 100%;
   height: auto;
   object-fit: cover;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
 }
 
 /* Text container */
@@ -459,6 +465,8 @@ html, body {
   padding: 12px 10px;
   font-size: 0.95rem;
   color: black;
+  border-radius: 7px;
+
   
 }
 
